Update change log.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2016-02-26  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2016-03-07  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.1.0 released
         ========================
 
+        Add support for stacked analysis energy dispersion (#1724)
         Test and import IACT scripts only for Python 2.6+ (#1715)
         Add documentation for IACT analysis (#1646)
         Adapt to revise GTime operators (#1714)
