--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.1.0
 
-17 April 2016
+22 April 2016
 
 
 Introduction
@@ -199,6 +199,9 @@ support energy dispersion for stacked analysis (#1724).
 Add csworkflow script that executes an arbitrary analysis workflow (#1508).
 
 Transformed cta_root2caldb into csroot2caldb script.
+
+Add csobsdef.pntdef() method to set directly a pointing definition from a
+gammalib.GCsv object (#1771).
 
 
 Examples
