--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2016-04-22  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2016-04-25  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.1.0 released
         ========================
 
+        Add "bgdoversample" and "bgdinfill" parameters to csroot2caldb
         Add csobsdef.pntdef() method (#1771)
         Add ctmapcube tool (#1760)
         Add "seed" parameter to cspull (#1755)
