--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.1.0
 
-20 June 2016
+21 June 2016
 
 
 Introduction
@@ -91,6 +91,14 @@ ctbin - CTA event binning
 -------------------------
 Add publish() method to publish the counts cube via a SAMP Hub to Virtual
 Observatory interoperable tools (e.g. Aladin).
+
+The tool now computes the counts cube weights according to the overlaps
+between the Region of Interests and energy boundaries with the counts
+cube bins. This allows in particular for a proper handling of different
+energy thresholds between observations that will be stacked into a single
+cube. Also different Region of Interests are now properly handled, and
+there is no longer an issue with counts cubes that are larger than the
+Region of Interest of the event list (#1789).
 
 
 ctlike - Maximum likelihood fitting
