--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 1.1.0
 
-1 July 2016
+9 July 2016
 
 
 Introduction
@@ -11,7 +11,7 @@ ctools release with respect to the precedent release.
 
 Configuration
 -------------
-None
+The package now supports out of source builds (#1484).
 
 
 Python interface
