--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2016-07-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2016-07-21  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.1.0 released
         ========================
 
+        Fix stacked analysis bias (#1819)
         Add background model science verification (#1815)
         Add cstsmapsplit script (#1797)
         Add unit tests for all example scripts
