--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2016-07-29
+2016-07-31
 
         * Version 1.2.0 released
         ========================
 
+        Add support modules to cscripts (#1830)
         Fix lacking coverage measure for cscripts execution (#1827)
         Set "addbounds" parameters by default to "no" (#1819)
 
