--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2016-07-31
+2016-08-04
 
         * Version 1.2.0 released
         ========================
 
+        Fix exception when calling ctools clear() methods (#1835)
         Add support modules to cscripts (#1830)
         Fix lacking coverage measure for cscripts execution (#1827)
         Set "addbounds" parameters by default to "no" (#1819)
