--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
         * Version 1.2.0 released
         ========================
 
+        Fix ctbin::save() bug for empty observation container (#1835)
         Fix exception when calling ctools clear() methods (#1835)
         Add support modules to cscripts (#1830)
         Fix lacking coverage measure for cscripts execution (#1827)
