--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 
         Fix ctbin::save() bug for empty observation container (#1835)
         Fix exception when calling ctools clear() methods (#1835)
+        Add support for new spectral models in ctulimit (#1832)
         Add support modules to cscripts (#1830)
         Fix lacking coverage measure for cscripts execution (#1827)
         Set "addbounds" parameters by default to "no" (#1819)
