Use new GApplication logger methods and enhance ctool unit tests (#1828)

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,13 @@ Rolf Buehler (rolf.buehler@desy.de)
 Jean-Baptiste Cayrou (cayrou@etud.insa-toulouse.fr)
 Christoph Deil (Christoph.Deil@mpi-hd.mpg.de)
 Florent Forest (florent.forest@isae.fr)
+Lucie Gerard (lgerard@wgs18.zeuthen.desy.de)
+Maria Haupt (maria.haupt@desy.de)
+Nathan Kelley-Hoskins (nathan.kelley-hoskins@desy.de)
 Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu)
 Chia-Chun Lu (Chia-Chun.Lu@mpi-hd.mpg.de)
+Pierrick Martin (pierrick.martin@irap.omp.eu)
 Michael Mayer (michael.mayer@physik.hu-berlin.de)
-
+Stefan Ohm (stefan.ohm81@gmail.com)
+David Sanchez (david.sanchez@lapp.in2p3.fr)
+Hubert Siejkowski (h.siejkowski@cyfronet.pl)
