--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
         * Version 1.2.0 released
         ========================
 
+        Rename ctskymap::map() to ctskymap::skymap() (#1828)
         Introduce ctobservation and ctlikelihood base classes (#1828)
         Remove ctselect::time_reference() method
         Add ctool and cscript pars() methods (#1838)
